2014-03-01  Timothy Hatcher  <timothy@apple.com>

        Label JavaScript forced layouts as such in the Timeline.

        https://bugs.webkit.org/show_bug.cgi?id=129546

        Reviewed by David Kilzer.

        * Localizations/en.lproj/localizedStrings.js: Updated.
        * UserInterface/Controllers/TimelineManager.js:
        (WebInspector.TimelineManager.prototype.eventRecorded.processRecord):
        (WebInspector.TimelineManager.prototype.eventRecorded):
        * UserInterface/Models/LayoutTimelineRecord.js:
        (WebInspector.LayoutTimelineRecord.EventType.displayName):
        * UserInterface/Views/TimelineRecordTreeElement.js:
        (WebInspector.TimelineRecordTreeElement):

2014-02-28  Timothy Hatcher  <timothy@apple.com>

        Enable breakpoints when adding a new breakpoint or enabling an existing breakpoint.

        This eliminates a multi-step process for the user that can be confusing.

        https://bugs.webkit.org/show_bug.cgi?id=129426

        Reviewed by Joseph Pecoraro.

        * UserInterface/Controllers/DebuggerManager.js:
        (WebInspector.DebuggerManager.prototype.set breakpointsEnabled):
        (WebInspector.DebuggerManager.prototype._breakpointDisabledStateDidChange):
        * UserInterface/Views/DebuggerSidebarPanel.js:
        (WebInspector.DebuggerSidebarPanel):
        (WebInspector.DebuggerSidebarPanel.prototype._breakpointsEnabledDidChange):
        (WebInspector.DebuggerSidebarPanel.prototype._breakpointsToggleButtonClicked):

2014-02-27  Timothy Hatcher  <timothy@apple.com>

        Use a RegExp when when using CodeMirror's SearchCursor.

        This avoids doing toLowerCase() on every line of the TextEditor.

        https://bugs.webkit.org/show_bug.cgi?id=129463

        Reviewed by Joseph Pecoraro.

        * UserInterface/Views/TextEditor.js:
        (TextEditor.prototype.performSearch): Use a RegExp for query. Pass false for the caseFold
        argument, but it is ignored for RegExp searches anyway.
